=======
CHANGES
=======

0.7.1 (2012-04-??)
------------------

- Performance: Switched to ``repoze.lru`` (from ``lru``), which is much
  faster.

- Performance: To avoid excessive hash computations, we now use the hash of
  the ``DBRef`` references as cache keys.

- Bug: ``ObjectId`` ids are not guarantted to be unique accross
  collections. Thus they are a bad key for global caches. So we use full
  ``DBRef`` references instead.

0.7.0 (2012-04-02)
------------------

- Feature: A new ``IConflictHandler`` interface now controls all aspects of
  conflict resolution. The following implementations are provided:

  * ``NoCheckConflictHandler``: This handler does nothing and when used, the
    system behaves as before when the ``detect_conflicts`` flag was set to
    ``False``.

  * ``SimpleSerialConflictHandler``: This handler uses serial numbers on each
    document to keep track of versions and then to detect conflicts. When a
    conflict is detected, a ``ConflictError`` is raised. This handler is
    identical to ``detect_conflicts`` being set to ``True``.

  * ``ResolvingSerialConflictHandler``: Another serial handler, but it has the
    ability to resolve a conflict. For this to happen, a persistent object
    must implement ``_p_resolveConflict(orig_state, cur_state, new_state)``,
    which returns the new, merged state. (Experimental)

  As a result, the ``detect_conflicts`` flag of the data manager was removed
  and replaced with the ``conflict_handler`` attribute. One can pass in the
  ``conflict_handler_factory`` to the data manager constructor. The factory
  needs to expect on argument, the data manager.

- Feature: The new ``IdNamesMongoContainer`` class uses the natural Mongo
  ObjectId as the name/key for the items in the container. No more messing
  around with coming up or generating a name. Of course, if you specified
  ``None`` as a key in the past, it already used the object id, but it was