@@ -5,13 +5,15 @@ CHANGES
 0.7.1 (2012-04-??)
 ------------------
 
+- Bug: don't err on missing _py_serial on older states from mongo
+
 - Performance: Switched to ``repoze.lru`` (from ``lru``), which is much
   faster.
 
 - Performance: To avoid excessive hash computations, we now use the hash of
   the ``DBRef`` references as cache keys.
 
-- Bug: ``ObjectId`` ids are not guarantted to be unique accross
+- Bug: ``ObjectId`` ids are not guaranteed to be unique across
   collections. Thus they are a bad key for global caches. So we use full
   ``DBRef`` references instead.
 
